[package]
name = "atomic-ref"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
crossbeam-utils = "0.8.21"

arc-swap = {version ="1.7.1", optional = true} 

[dev-dependencies]
proptest = "1.7.0"
criterion = "0.7.0"


[features]
testing = ["dep:arc-swap"]

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.2", features = ["checkpoint"] }

[lib]
name = "lib"
path = "src/lib.rs"

[[example]]
name = "example"
path = "examples/example.rs"


[[bench]]
name = "write"
harness = false
